--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <li ><a  href="">Administrador Peliculas</a></li>
             </ul>
         </nav>
-        <a href="#main">
+        <a href="#main" class="irArriba">
             <img src="./assets/img/flecha-hacia-arriba.png" alt="ir arriba flecha">
         </a>
     </footer>
