cambios en index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAC-MOVIES</title>
+    <title>MOVIELAND</title>
    
     <link rel="stylesheet" href="./css/estilos.css">
     <script src="https://kit.fontawesome.com/f7fb471b65.js" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
         <nav >
             <a href="#">
                 <i class="fas fa-film" aria-hidden="true"></i>
-                <span>CAC-Movies</span>
+                <span>Movieland</span>
             </a>
             <ul >
                 <li ><a  href="#tendencias">Tendencias</a></li>
@@ -27,7 +27,7 @@
     <main id="main" >
         <section class="sectionTitulos">
             <div class="contenedorTitulos">
-                <h1 >Películas y series ilimitadas <br> en un solo lugar</h1>
+                <h1 >Películas y series <br> en un solo lugar</h1>
                 <h2 >Disfruta donde quieras. <br> Cancela en cualquier momento.</h2>
                 <a  href="./pages/registrarse.html" class="btn-primary">Registrate</a>
             </div>
