style reg, ini, det

--- a/pages/iniciosesion.html
+++ b/pages/iniciosesion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión | CAC-MOVIES</title>
+    <title>Iniciar Sesión | Movieland</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/f7fb471b65.js" crossorigin="anonymous"></script>
@@ -11,14 +11,9 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body class="bodyRegistrarse">
-    <header class="headerRegistrarse">
-        <a class="anclaLogo" href="../index.html">
-            <i class="fas fa-film" aria-hidden="true"></i>
-            <span>CAC-Movies</span>
-        </a>
-    </header>
     <main id="main" class="main">
-        <section >
+        <section class="seccionRegistrarse" >
+            <a href="/index.html"><h2>Movieland</h2></a>
             <!--pongo get ya que en github pages da error el method post-->
             <form action="" method="get">
                 <h2 class="tituloRegistrarse">Iniciar Sesión</h2>
@@ -31,7 +26,7 @@
                     <div class="error-text"></div>
                 </div>
                 <div>
-                    <input class="boton" type="submit" value="Iniciar Sesión">
+                    <button class="btn-primary" type="submit">Iniciar Sesion</button> 
                 </div>
                 <div>
                     <a id="ayuda" class="ayuda" href="registrarse.html">Registrarse</a>
