--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -11,6 +11,19 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body class="bodyRegistrarse">
+    <header class="header" >
+        <nav >
+            <a href="#">
+                <i class="fas fa-film" aria-hidden="true"></i>
+                <span>Movieland</span>
+            </a>
+            <ul >
+                <li ><a  href="../index.html#tendencias">Tendencias</a></li>
+                <li ><a  href="../pages/registrarse.html">Registrarse</a></li>
+                <li ><a  href="../pages/iniciosesion.html">Iniciar Sesión</a></li>
+            </ul>
+        </nav>
+    </header>
     <main id="main" class="main">
         <section class="seccionRegistrarse">
             <a href="/index.html"><h2>Movieland</h2></a>
