--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -13,7 +13,7 @@
 <body class="bodyRegistrarse">
     <header class="header" >
         <nav >
-            <a href="#">
+            <a href="../index.html">
                 <i class="fas fa-film" aria-hidden="true"></i>
                 <span>Movieland</span>
             </a>
