agregando estilos forms

--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -10,20 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
-<body class="bodyRegistrarse">
-    <header class="header" >
-        <nav >
-            <a href="../index.html">
-                <i class="fas fa-film" aria-hidden="true"></i>
-                <span>Movieland</span>
-            </a>
-            <ul >
-                <li ><a  href="../index.html#tendencias">Tendencias</a></li>
-                <li ><a  href="../pages/registrarse.html">Registrarse</a></li>
-                <li ><a  href="../pages/iniciosesion.html">Iniciar Sesión</a></li>
-            </ul>
-        </nav>
-    </header>
+<body class="bodyForms">
+    <a href="../index.html">
+        <i class="fas fa-film" aria-hidden="true"></i>
+        <span>Movieland</span>
+    </a>
     <main id="main" class="main">
         <section class="seccionRegistrarse">
             <a href="/index.html"><h2>Movieland</h2></a>
@@ -38,7 +29,7 @@
                     <div class="error-text"></div>
                 </div>
                 <div>
-                    <input type="email" placeholder="Email"  id="email" name="email">
+                    <input type="email" placeholder="Email"  id="email" name="email" >
                     <div class="error-text"></div>
                 </div>
                 <div>
@@ -67,7 +58,7 @@
                 </div>
                 <div class="terminos">
                     <input class="check" type="checkbox" id="terminos">
-                    <label class="textoCheck" for="terminos">Acepto términos y condiciones</label>
+                    <a><label class="textoCheck" for="terminos">Acepto términos y condiciones</label></a>
                     <div class="error-text"></div>
                 </div>
                 <div>
