--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -37,7 +37,7 @@
                     <div class="error-text"></div>
                 </div>
                 <div>
-                    <button class="btn-primary" type="submit" >Registrarse</button>
+                    <button class="btn-primary" type="submit" >Aceptar</button>
                 </div>
                     <a class="ayuda" href="../pages/iniciosesion.html">¿Tienes una cuenta? inicia sesion</a>
             </form>
