comienzo de api

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <span>Movieland</span>
             </a>
             <ul >
+                <li><a href="./pages/ExampleApi.html"><font color="00ff">Ejemplo Api</font></a></li>
                 <li ><a  href="#tendencias">Tendencias</a></li>
                 <li ><a  href="./pages/registrarse.html">Registrarse</a></li>
                 <li ><a  href="./pages/iniciosesion.html">Iniciar Sesión</a></li>
