--- a/pages/ExampleApi.html
+++ b/pages/ExampleApi.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <section id="sectionApi">
-
+        <button onclick="consumirApi()">Consumir api</button>
+        <div id="api"></div>
     </section>
 
-    <script src=""></script>
+    <script src="../js/api.js"></script>
 </body>
 </html>
