cambios en validaciones

--- a/pages/iniciosesion.html
+++ b/pages/iniciosesion.html
@@ -18,7 +18,7 @@
     <main id="main" class="main">
         <section class="seccionRegistrarse" >
             <!--pongo get ya que en github pages da error el method post-->
-            <form id="formulario" onsubmit="return validation()">
+            <form id="formulario" onsubmit="return validarLogin()">
                 <h2 class="tituloRegistrarse">Iniciar Sesión</h2>
                 <a href="../index.html">Volver al inicio</a>
                 <div>
