--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -17,7 +17,7 @@
     </a>
     <main id="main" class="main">
         <section class="seccionRegistrarse">
-            <form id="formulario" onsubmit="return validation()">
+            <form id="formulario" onsubmit="return validarRegistro()">
                 <h2 class="tituloRegistrarse">Crear un cuenta</h2>
                 <a href="../index.html">Volver al inicio</a>
                 <div>
