cambios en validaciones

--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -33,8 +33,8 @@
                     <span id="errorPass" class="error-text"></span>
                 </div>
                 <div>
-                    <input type="password" placeholder="Repetir Contraseña"  id="repassword" name="password">
-                    <span id="errorPass" class="error-text"></span>
+                    <input type="password" placeholder="Repetir Contraseña"  id="repassword" name="repassword">
+                    <span id="errorRepass" class="error-text"></span>
                 </div>
                 <div>
                     <button class="btn-primary" type="submit" >Aceptar</button>
