agrego estilos a pagina de detalles y mediaquerys

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <header class="header" >
-        <nav >
+        <nav class="navegacion">
             <a href="#">
                 <i class="fas fa-film" aria-hidden="true"></i>
                 <span>Movieland</span>
             </a>
-            <ul >
+            <ul class="listaNav">
                 <li ><a  href="#tendencias">Tendencias</a></li>
                 <li ><a  href="./pages/registrarse.html">Registrarse</a></li>
                 <li ><a  href="./pages/iniciosesion.html">Iniciar Sesión</a></li>
