--- a/pages/ExampleApi.html
+++ b/pages/ExampleApi.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo Api</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/styleApi.css">
 </head>
 <body>
     <section id="sectionApi">
-        <button onclick="consumirApi()">Consumir api</button>
-        <div id="api"></div>
+        <button onclick="fetchMovies()">Consumir api</button>
+        <h1>Popular Movies</h1>
+        <div id="movies"></div>
     </section>
 
     <script src="../js/api.js"></script>
